# spritesage

./: .gitignore  BUILD.md  CONTRIBUTING.md  MODEL_REFRESH.md  README.md  THIRD_PARTY_LICENSES.md  __init__.py  config.py  console.py  editor.py  exporter.py  image_loader.py  image_viewer.py  inference.py  logo.py  main.py  main.spec  main_window.py  menu_bar.py  pyproject.toml  pytest.ini  requirements.txt  sage_editor.py  sidebar.py  sprite_editor.py  sprite_file.py  spritesheet.py  startup_screen.py  test_requirements.txt  utils.py
.github/workflows/: ci.yml
src/spritesage/: __init__.py  ai_models.py  animation_service.py  art_import_dialog.py  art_importer.py  config.py  console.py  editor.py  export_ui.py  exporter.py  image_loader.py  image_viewer.py  inference.py  logo.py  main.py  main_window.py  menu_bar.py  recent_projects.py  sage_editor.py  sage_file.py  sidebar.py  sprite_editor.py  sprite_file.py  spritesheet.py  startup_screen.py  undo_redo.py  utils.py
src/spritesage/model_baker/: __init__.py  animations.py  cameras.py  cli.py  dialog.py  godot_exporter.py  mesh_io.py  service.py  sheet.py  skinned_gltf.py  sprite_writer.py  stylize.py  vtk_baker.py
tests/: test_ai_models.py  test_animation_service.py  test_art_importer.py  test_config.py  test_console.py  test_editor.py  test_export_ui.py  test_image_loader.py  test_image_viewer.py  test_inference.py  test_logo.py  test_main.py  test_main_window.py  test_menu_bar.py  test_model_baker.py  test_recent_projects.py  test_sage_editor.py  test_sidebar.py  test_sprite_editor.py  test_sprite_export.py  test_startup_screen.py  test_undo_redo.py  test_utils.py
